Fixed RoomEase logo alignment in Navbar

--- a/frontend/src/Components/Navbar/Styles/Navbar.scss
+++ b/frontend/src/Components/Navbar/Styles/Navbar.scss
@@ -12,6 +12,9 @@
             grid-area: navbar_logo;
             display: grid;
             grid-template-columns: 70px 170px;
+            .navbar_logo_name {
+                margin: auto auto auto 0;
+            }
         }
         .navbar_buttons {
             grid-area: navbar_buttons;
